75553032 - add new style of throbber / User should be notified when the page is loading 76379462 - fixed bug /the tabs are not aligned and there is extra line near the notification tab

--- a/docroot/sites/all/modules/custom/sbac_user/sass/profile.scss
+++ b/docroot/sites/all/modules/custom/sbac_user/sass/profile.scss
@@ -598,6 +598,8 @@ h2.name {
 .page-user .section-container.auto > section .content {
     margin: 0 -55px;
 		padding: 10px 50px;
+		position: relative;
+		z-index: 9999;
 }
 
 /*overwrite from global*/
